--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,12 @@ task runCheckingFixture(type: JavaExec) {
     classpath = sourceSets.test.runtimeClasspath
     main = "CheckingAccountTestFixture"
 }
-
+task runSavingFixture(type: JavaExec) {
+    group = "Execution"
+    description = "Run SavingsAccountTestFixture class"
+    classpath = sourceSets.test.runtimeClasspath
+    main = "SavingsAccountTestFixture"
+}
 repositories {
     mavenCentral()
 }
